# group_files_into_dirs

./: Cargo.toml  README.md  build.sh  config.toml
src/: errors.rs  files.rs  fs.rs  libs.rs  main.rs  parse_args.rs  workflow.rs
src/libs/: checkbox.rs  errors.rs  extract_keywords.rs  fs.rs  interactive.rs  keywords.rs  parse_args.rs  stdout.rs  tui.rs
src/workflow/: dirs_as_keywords.rs  interactive.rs
test/: Cargo.toml
